--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,81 @@ html, body{
 
 .statistic
 {
-    position:fixed; 
     left: 0; 
+    border-color: aquamarine;
+    width: 10%;
+    margin: 10,10,0,0;
+    float: left;
+
 }
+
+.statistic li {
+  list-style-type: none;
+  font-size: 50;
+}
+
+.statistic h3 {
+  list-style-type: none;
+  margin: 1;
+}
+
+.close-modal-window {
+    position: absolute;
+    top: 1.2rem;
+    right: 2rem;
+    font-size: 5rem;
+    color: #444;
+    cursor: pointer;
+    border: none;
+    background: none;
+  }
+  
+  h1 {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    text-align:center;
+  }
+
+.statisticPanel
+{
+  background-color: aqua;
+  margin: 0;
+    padding: 0;
+}
+
+.statisticPanel li {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border: 1px solid #000;
+}
+
+.hidden {
+    display: none;
+  }
+  
+  .modal-window {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 70%;
+  
+    background-color: #fff;
+    padding: 6rem;
+    border-radius: 5px;
+    box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+    z-index: 10;
+  }
+  
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(3px);
+    z-index: 5;
+  }
+  
